--- a/via-manager.css
+++ b/via-manager.css
@@ -1,9 +1,3 @@
 body{
-    background-color: #79d0ff;
-  }
-  #teste{
-    width: 400px;
-    height: 100px;
-    background-image: url(logolc.png);
-    background-repeat: repeat;
+    background-color: rgb(169, 174, 177);
   }
