--- a/via-manager.css
+++ b/via-manager.css
@@ -28,5 +28,32 @@ img{
 
 input[type="checkbox"]
 {
-    display: none
+    display: none;
+}
+
+nav
+{
+    background-color: rgba(10,10,10,.3);
+    width: 350px;
+    height: 100%;
+}
+ul{
+    background-color: blue;
+}
+
+a{
+    background-color: grey;
+    display: block;
+    padding: 15px 3px;
+}
+
+a:hover{
+    background-color: rgb(176,224,230);
+    color: black;
+}
+
+label{
+    background-color: grey;
+    padding: 15px;
+    position: absolute;
 }
