--- a/via-manager.css
+++ b/via-manager.css
@@ -14,6 +14,7 @@ a{
 
 body{
     font-family: arial;
+    background-color: darkcyan;
 
 
 }
@@ -22,23 +23,15 @@ ul{
     List-style: none;
 }
 
-img{
-    width: 40px;
-}
-
-input[type="checkbox"]
-{
-    display: none;
-}
 
 nav
 {
     background-color: rgba(10,10,10,.3);
-    width: 350px;
+    width: 200px;
     height: 100%;
 }
 ul{
-    background-color: blue;
+    background-color: rgb(0, 123, 255);
 }
 
 a{
